# glyphc6_zb_ha

./: .gitignore  BUILD_AND_TEST.md  CHANGES_SUMMARY.md  CMakeLists.txt  QUICK_START.md  README.md  ROADMAP.md  ZIGBEE_SETUP.md  index.json  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  battery_monitoring.c  battery_monitoring.h  deep_sleep.c  deep_sleep.h  idf_component.yml  main.c  main_always_on.c  soil_sensor.c  soil_sensor.h  system_config.h  zigbee_core.c  zigbee_core.h
z2m/: glyph_c6_converter.js  z2m_ota_config_example.yaml
